# FrameLift-Examples

./: .gitignore  CLA.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
clock-overlay/: CMakeLists.txt  ClockOverlay.Plugin.json  ClockOverlay.cpp  ClockOverlay.h  ClockOverlay.qml
hello-plugin/: CMakeLists.txt  HelloPlugin.h
now-playing/: CMakeLists.txt  NowPlaying.Plugin.json  NowPlaying.cpp  NowPlaying.h
